@@ -1,4 +1,5 @@
 2.2.7 (ws)
+      - fix kb note entry for staff != 0
       - tuplets: implement undo/redo
       - add beam functions to pad
       - move KeyList from Score() to Staff() allowing for different key
